--- a/style.css
+++ b/style.css
@@ -2,73 +2,93 @@
 
 /* universal selector */
 * {
-    /* padding/margin doesn't stack/affect overall width */
-    box-sizing: border-box;
+  /* padding/margin doesn't stack/affect overall width */
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Muli', sans-serif;
-    /* center content */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
+  font-family: 'Muli', sans-serif;
+  background-color: whitesmoke;
+  /* center content */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+  overflow: hidden;
+  margin: 0;
+  text-align: left;
+}
+
+.title {
+  width: 90vw;
+  margin-top: 2rem;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+h1 {
+  padding: 0;
+  margin: 0;
 }
 
 /* container for image panels */
 .container {
-    display: flex;
-    width: 90vw;
+  display: flex;
+  width: 90vw;
+  height: 90vh;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 /* styling image panels - default inactive */
 .panel {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 80vh;
-    border-radius: 50px;
-    cursor: pointer;
-    color:aliceblue;
-    flex: 0.5;
-    margin: 10px;
-    /* need relative container to make h3 position absolute */
-    position: relative;
-    /* animate expansion/shrinking */
-    transition: flex 0.7s ease-in;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 80vh;
+  border-radius: 50px;
+  cursor: pointer;
+  color: whitesmoke;
+  text-shadow: 1px 1px 3px rgba(19, 19, 19, 0.7);
+  flex: 0.5;
+  margin: 10px;
+  /* need relative container to make h3 position absolute */
+  position: relative;
+  /* animate expansion/shrinking */
+  transition: flex 1s ease-in;
 }
 
 /* select h3s inside panels */
 .panel h3 {
-    font-size: 3rem;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    margin: 0;
-    opacity: 0;
+  font-size: 3rem;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
 }
 
 /* select elements that have both classes */
 .panel.active {
-    flex: 5;
+  flex: 5;
 }
 
 /* make h3 visible for active panel */
 .panel.active h3 {
-    opacity: 1;
+  opacity: 1;
+  transition: opacity 0.2s ease-in 0.8s;
 }
 
 /* style for viewport UNDER 480px */
-@media(max-width: 480px) {
-    .container {
-        width: 100vw;
-    }
+@media (max-width: 480px) {
+  .container {
+    width: 100vw;
+  }
 
-    /* pseudo selector - on 4th and 5th element */
-    .panel:nth-of-type(4), 
-    .panel:nth-of-type(5) {
-        display: none;
-    }
+  /* pseudo selector - on 4th and 5th element */
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
+    display: none;
+  }
 }
